disabled image helper

--- a/themes/alienvibes/layouts/partials/head.html
+++ b/themes/alienvibes/layouts/partials/head.html
@@ -24,6 +24,6 @@
 
     {{ with .Params.gallery }}
 
-    <script type="text/javascript" src="https://bd27262ff848bd272624411.zapwp.com/generate_js:true"></script>
+    <!-- <script type="text/javascript" src="https://bd27262ff848bd272624411.zapwp.com/generate_js:true"></script> -->
     {{ end }}
 </head>
