--- a/themes/alienvibes/layouts/_default/gallery.html
+++ b/themes/alienvibes/layouts/_default/gallery.html
@@ -27,7 +27,7 @@
             {{ $thumbnail := $original.Fill "300x300" }}
             <div class="col-12 col-md-6 col-lg-3 mx-auto text-center">
                 <img data-full="{{ $original.RelPermalink | absURL }}" data-src="{{ $thumbnail.RelPermalink | absURL }}"
-                    alt="image" class="gallery" decoding="async" height="300" width="300" />
+                    alt="image" class="gallery lazy" decoding="async" height="300" width="300" />
             </div>
             {{ end }}
             {{ end }}
