fixed iframe title

--- a/themes/alienvibes/layouts/partials/locationBlock.html
+++ b/themes/alienvibes/layouts/partials/locationBlock.html
@@ -10,7 +10,7 @@
                 </p>
             </div>
             <div class="col-12 col-lg-8 mx-auto my-3 text-center">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11313.900965348073!2d-85.1113891!3d44.8526191!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf8bb784fd02c9001!2sArea%2051%20Paintball!5e0!3m2!1sen!2sus!4v1639274919376!5m2!1sen!2sus" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11313.900965348073!2d-85.1113891!3d44.8526191!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf8bb784fd02c9001!2sArea%2051%20Paintball!5e0!3m2!1sen!2sus!4v1639274919376!5m2!1sen!2sus" width="100%" height="400" style="border:0;" allowfullscreen="" title="Area 51 Map" aria-label="Map" loading="lazy"></iframe>
             </div>
         </div>
     </div>
