fixed target blank on footer

--- a/themes/alienvibes/layouts/partials/footer.html
+++ b/themes/alienvibes/layouts/partials/footer.html
@@ -53,7 +53,7 @@
 <div class="container-fluid bg-black">
     <div class="row">
         <div class="col md-12">
-            <p class="text-center p-3">&copy; <span id="year">2022</span> Site Designed & Developed By <a href="https://www.andrew-mccall.com/services/web-development-traverse-city" title="Traverse City Web Design" target="_blank">Andrew M McCall</a><span class="wave ps-2">👋</span> </p>
+            <p class="text-center p-3">&copy; <span id="year">2022</span> Site Designed & Developed By <a href="https://www.andrew-mccall.com/services/web-development-traverse-city" title="Traverse City Web Design">Andrew M McCall</a><span class="wave ps-2">👋</span> </p>
         </div>
     </div>
 </div>
