removed padding from main container list page

--- a/themes/alienvibes/layouts/_default/list.html
+++ b/themes/alienvibes/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="container-fluid mx-auto">
+<div class="container-fluid mx-auto px-0">
     <div class="row">
         <div class="row p-3">
             <div class="col text-center mx-auto">
@@ -7,9 +7,9 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-12 col-md-10 col-lg-8 mx-auto">
-            <main class="main-content container-fluid mx-auto mb-5">
+    <div class="row px-0">
+        <div class="col-12 col-md-10 col-lg-8 mx-auto px-0">
+            <main class="main-content container-fluid mx-auto mb-5 px-2">
                 <div class="row">
                     <div class="col-12">
                         <section class="list w-100 mx-auto">
