--- a/themes/alienvibes/layouts/partials/footer.html
+++ b/themes/alienvibes/layouts/partials/footer.html
@@ -58,7 +58,7 @@
     </div>
 </div>
 <div class="elevator" onclick="backToTop()">
-    <a href="#top" title="return to the top">
+    <a href="#top" class="d-block" title="return to the top">
     <i class="fas fa-arrow-circle-up fa-2x text-success"></i>
     </a>
 </div>
