--- a/themes/alienvibes/static/scss/main.scss
+++ b/themes/alienvibes/static/scss/main.scss
@@ -19,13 +19,16 @@
     padding: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 html,
 body {
     height: 100%;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    scroll-behavior: smooth;
     width: 100%;
 }
 
@@ -52,5 +55,14 @@ body {
     z-index: 0;
 }
 
+.elevator-link {
+    position: relative;
+    z-index: 99;
+}
 
+.object-fit-cover {
+    height: 150px;
+    width: 150px;
+    object-fit: cover !important;
+}
 
