--- a/themes/alienvibes/layouts/partials/cta.html
+++ b/themes/alienvibes/layouts/partials/cta.html
@@ -5,9 +5,7 @@
         </div>
         <div class="row">
             <div class="col-12 col-md-9 mx-auto p-3 d-flex flex-row align-items-stretch">
-                <div class="d-none d-md-inline-block shape me-3 bg-success">
-                    <!--<?xml version="1.0" encoding="iso-8859-1"?> -->
-<!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <div class="d-none d-lg-inline-block shape me-3 bg-success">
 <svg version="1.1" id="Layer_1" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 496.159 496.159" style="enable-background:new 0 0 250 250;" xml:space="preserve">
 <path class="svg-1" style="fill:#334D5C;" d="M248.083,0.003C111.071,0.003,0,111.063,0,248.085c0,137.001,111.07,248.07,248.083,248.07
