--- a/themes/alienvibes/layouts/partials/whyChooseUs.html
+++ b/themes/alienvibes/layouts/partials/whyChooseUs.html
@@ -10,7 +10,7 @@
             <div class="col-12 col-md-6 p-3 mx-auto text-center">
                 <figure class="extra-depth text-center">
                     {{ with .Params.why_us_image}}
-                <img data-src="{{ . | absURL}}" alt="why choose us image" class="lazy img-fluid shadow-lg mb-3" width="500" height="350" style="max-height: 85vh; width: auto;">
+                <img data-src="{{ . | absURL}}" alt="why choose us image" class="lazy img-fluid shadow-lg mb-3" width="500" height="350">
                 {{ end }}
                 </figure>
             </div>
