changed hero image to webp

--- a/themes/alienvibes/layouts/partials/heroHeader.html
+++ b/themes/alienvibes/layouts/partials/heroHeader.html
@@ -1,6 +1,6 @@
 <header class="hero container-fluid">
     <div class="hero__image-wrapper">
-        <img data-src="{{.Site.BaseURL}}images/paintball-in-the-woods.jpg" class="hero__image-wrapper__background lazy d-none d-xl-block" alt="paintball players in a forest running" height="1080" width="1920">
+        <img data-src="{{.Site.BaseURL}}images/paintball-in-the-woods.webp" class="hero__image-wrapper__background lazy d-none d-xl-block" alt="paintball players in a forest running" height="1080" width="1920">
     </div>
     <div class="hero-content container-fluid p-3">
         <div class="row">
