--- a/themes/alienvibes/layouts/_default/frequently-asked-questions.html
+++ b/themes/alienvibes/layouts/_default/frequently-asked-questions.html
@@ -31,8 +31,8 @@
         type="button"
         class="btn btn-lg btn-danger p-3 faq-btn"
       >
-        <i class="fas fa-arrow-circle-right fa-2x float-start"></i>{{
-        $element.question | markdownify }}
+        <i class="fas fa-arrow-circle-right fa-2x float-start"></i>
+        {{ $element.question | markdownify }}
       </button>
       <div data-active="{{ $index }}" class="d-block content">
         <p class="lead">{{ $element.answer }}</p>
