--- a/themes/alienvibes/layouts/index.html
+++ b/themes/alienvibes/layouts/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 {{ partial "head.html" . }}
 <body id="top">
+    {{ partial "closedForSeasons.html" . }}
     {{ partial "navBar.html" . }}
     {{ partial "heroHeader.html" . }}
     {{ partial "aboutBlock.html" . }}
@@ -10,6 +11,7 @@
     {{ partial "cta.html" . }}
     {{ partial "testimonials.html" .}}
     {{ partial "locationBlock.html" . }}
+    {{ partial "safety-requirements.html" . }}
     {{ partial "footer.html" . }}
    {{- partial "scripts.html" . -}}
 </body>
