--- a/themes/alienvibes/layouts/_default/baseof.html
+++ b/themes/alienvibes/layouts/_default/baseof.html
@@ -2,6 +2,7 @@
 <html>
     {{- partial "head.html" . -}}
     <body id="top">
+        {{ partial "closedForSeasons.html" . }}
         {{ partial "navBar.html" . }}
         {{- partial "header.html" . -}}
         <div class="container-fluid">
@@ -11,6 +12,7 @@
         {{ partial "cta.html" . }}
         {{ partial "testimonials.html" .}}
         {{ partial "locationBlock.html" . }}
+        {{ partial "safety-requirements.html" . }}
         {{- partial "footer.html" . -}}
         {{- partial "scripts.html" . -}}
     </body>
