--- a/themes/alienvibes/layouts/_default/baseof.html
+++ b/themes/alienvibes/layouts/_default/baseof.html
@@ -2,7 +2,9 @@
 <html>
     {{- partial "head.html" . -}}
     <body id="top">
+        {{ if .Site.Params.closed_for_season }}
         {{ partial "closedForSeasons.html" . }}
+        {{ end }}
         {{ partial "navBar.html" . }}
         {{- partial "header.html" . -}}
         <div class="container-fluid">
