--- a/themes/alienvibes/layouts/partials/head.html
+++ b/themes/alienvibes/layouts/partials/head.html
@@ -28,4 +28,6 @@
 
     <!-- <script type="text/javascript" src="https://bd27262ff848bd272624411.zapwp.com/generate_js:true"></script> -->
     {{ end }}
+    <script defer data-domain="area51paintball.net" src="https://plausible.io/js/plausible.js"></script>
+
 </head>
