--- a/themes/alienvibes/layouts/partials/head.html
+++ b/themes/alienvibes/layouts/partials/head.html
@@ -15,6 +15,7 @@
     <!-- Preload, Prefetch, preconnect etc. -->
 
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+    <link rel="preconnect" href="https://plausible.io">
 
     <!-- Vendors -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"  crossorigin="anonymous" referrerpolicy="no-referrer" />
