fixed sizing and centering

--- a/themes/alienvibes/layouts/_default/paintball-center.html
+++ b/themes/alienvibes/layouts/_default/paintball-center.html
@@ -56,11 +56,11 @@
         <section class="row justify-content-center align-items-center my-3">
             <div class="col-12 col-lg-6 text-white p-3">
                 {{ if .image }}
-                <figure>
+                <figure class="text-center mx-auto">
                     <img data-src="{{ .image | absURL }}" class="lazy fluid-img" decoding="async" height="600" width="1200" alt="area 51 paintball sign" title="Area 51 Paintball - Northern Michigan Paintball" style="max-width: 100%; height: auto;">
                 </figure>
                 {{ else }}
-                <figure>
+                <figure class="text-center mx-auto">
                     <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 viewBox="0 0 496.159 496.159" style="enable-background:new 0 0 496.159 496.159;" xml:space="preserve">
