--- a/themes/alienvibes/layouts/partials/safety-requirements.html
+++ b/themes/alienvibes/layouts/partials/safety-requirements.html
@@ -8,7 +8,7 @@
         </div>
     </div>
     <div class="row justify-content-center align-items-start">
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-lg-4">
             {{ with .Params.safety_requirements}}
             <h4 class="text-center mb-3">{{ .title }}</h4>
             <ul class="list-group-flush">
@@ -18,7 +18,7 @@
             </ul>
             {{ end }}
         </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-lg-4">
             {{ with .Params.rules_of_engagement }}
             <h4 class="text-center mb-3">{{ .title }}</h4>
             <ul class="list-group-flush">
@@ -28,7 +28,7 @@
             </ul>
             {{ end }}
         </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-lg-4">
             {{ with .Params.things_to_consider }}
             <h4 class="text-center mb-3">{{ .title }}</h4>
             <ul class="list-group-flush">
