--- a/themes/alienvibes/layouts/partials/head.html
+++ b/themes/alienvibes/layouts/partials/head.html
@@ -10,6 +10,8 @@
     <meta name="description" content="{{ .Site.Params.description}}">
     {{ end }}
 
+    {{ template "_internal/opengraph.html" . }}
+
     <link rel="shortcut icon" href="{{ .Site.BaseURL}}images/icon.png" type="image/x-icon">
 
     <!-- Preload, Prefetch, preconnect etc. -->
