--- a/themes/alienvibes/static/scss/main.scss
+++ b/themes/alienvibes/static/scss/main.scss
@@ -66,3 +66,17 @@ body {
     object-fit: cover !important;
 }
 
+section.rules {
+    .row {
+        background: rgba(0,0,0,0.5);
+        .rules-card {
+            @include mixins.transition;
+            opacity: 0.85;
+        }
+        &:hover {
+            .rules-card {
+                opacity: 1;
+            }
+        }
+    }
+}
