worked on rules background

--- a/themes/alienvibes/layouts/partials/safety-requirements.html
+++ b/themes/alienvibes/layouts/partials/safety-requirements.html
@@ -2,7 +2,7 @@
 <section data-background="{{ .Site.BaseURL }}images/backgrounds/paintball-spool-1920x1080.webp"  class="container-fluid bg-secondary text-center lazy-bg rules">
     <div class="row">
         <div class="container mx-auto p-3">
-            <h3 class="text-center">
+            <h3 class="text-center fw-bold h2">
                 {{ .Title }}
             </h3>
         </div>
