fixed about section

--- a/themes/alienvibes/layouts/partials/aboutBlock.html
+++ b/themes/alienvibes/layouts/partials/aboutBlock.html
@@ -1,7 +1,7 @@
 <section class="about-block p-3 bg-dark position-relative">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-6 p-3 ms-auto">
+            <div class="col-12 col-xl-6 p-3 ms-auto">
                 <h3 class="text-white h3 p-3 text-capitalize">The best Paintball Center serving Antrim county and the rest of northwestern lower Michigan.</h3>
                 {{ with .Params.about_block }}
                 <p class="text-white p-3">{{ . | markdownify }}</p>
@@ -11,7 +11,7 @@
                 <img src="{{. | absURL }}" alt="paintsplatter" class="bg-img img-fluid" loading="lazy" height="500" width="1920">
                 {{ end }}
             </div>
-            <div class="col-12 col-md-6 p-3 ms-auto">
+            <div class=" d-none d-xl-block col-12 col-lg-6 p-3 ms-auto">
                 {{ with .Params.about_image_soldier}}
                 <img data-src="{{. | absURL }}" alt="paintball person" class="img-fluid d-none d-xl-block lazy paintball-soldier" height="768" width="768">
                 {{ end }}
