--- a/themes/alienvibes/layouts/partials/safety-requirements.html
+++ b/themes/alienvibes/layouts/partials/safety-requirements.html
@@ -31,7 +31,7 @@
         <div class="col-12 col-md-9 col-lg-3 rules-card">
             {{ with .Params.things_to_consider }}
             <h4 class="text-center mb-3">{{ .title }}</h4>
-            <ul class="list-group-flush">
+            <ul class="list-group-flush p-0">
                 {{ range .list_items }}
                 <li class="list-group-item">{{ . }}</li>
             {{ end }}
