--- a/themes/alienvibes/static/css/main.css
+++ b/themes/alienvibes/static/css/main.css
@@ -1,13 +1,19 @@
 @keyframes fadeIn {
   from {
     opacity: 0;
+    filter: opacity(0);
     transform: translate3D(0, 0%, 0);
   }
   to {
     opacity: 1;
+    filter: opacity(1);
     transform: translate3D(0, 0%, 0);
   }
 }
+#eventModal.animate {
+  animation: fadeIn 500ms ease;
+}
+
 .hero {
   display: grid;
   margin: 0 auto !important;
