--- a/themes/alienvibes/static/scss/_components/_animations.scss
+++ b/themes/alienvibes/static/scss/_components/_animations.scss
@@ -1,10 +1,18 @@
 @keyframes fadeIn {
     from {
         opacity: 0;
+        filter: opacity(0);
         transform: translate3D(0, 0%, 0);
     }
     to {
         opacity: 1;
+        filter: opacity(1);
         transform: translate3D(0, 0%, 0);
+    }
+}
+
+#eventModal {
+    &.animate {
+        animation: fadeIn 500ms ease;
     }
 }
