added countdown to area 51 invasion

--- a/themes/alienvibes/layouts/_default/baseof.html
+++ b/themes/alienvibes/layouts/_default/baseof.html
@@ -16,6 +16,7 @@
         {{ partial "locationBlock.html" . }}
         {{ partial "safety-requirements.html" . }}
         {{- partial "footer.html" . -}}
+        {{- partial "countdown-timer.html" . -}}
         {{- partial "scripts.html" . -}}
     </body>
 </html>
