--- a/themes/alienvibes/layouts/index.html
+++ b/themes/alienvibes/layouts/index.html
@@ -16,6 +16,7 @@
     {{ partial "safety-requirements.html" . }}
     {{ partial "event-modal.html" . }}
     {{ partial "footer.html" . }}
+    {{- partial "countdown-timer.html" . -}}
    {{- partial "scripts.html" . -}}
    <script defer>
        const script = document.getElementById('bootstrapJS');
