--- a/themes/alienvibes/layouts/partials/countdown-timer.html
+++ b/themes/alienvibes/layouts/partials/countdown-timer.html
@@ -2,7 +2,7 @@
 .countdown {
     position: fixed;
     bottom: 0;
-    min-width: 100vw;
+    left: 0;
     opacity: 0.85;
     transition: all 250ms ease;
     -webkit-transition: all 250ms ease;
@@ -35,7 +35,7 @@
 }
 </style>
 
-<section class="container countdown bg-black">
+<section class="container-fluid countdown bg-black">
     <button id="timerToggle" class="close-timer btn btn-warning text-dark">&times;</button>
   <div class="row">
     <div class="col mx-auto p-3 text-center">
